z-index fixed

--- a/BalloonSimFront/src/styles.css
+++ b/BalloonSimFront/src/styles.css
@@ -70,6 +70,7 @@ nav {
   position: absolute;
   width: 100vw;
   height: 100vh;
+  z-index: 5;
   top: 0px;
   left: 0px;
   background-color: var(--darker);
@@ -78,7 +79,7 @@ nav {
 canvas {
   width: 100%;
   height: 100vh;
-  z-index: -1;
+  z-index: 5;
   margin: 0 auto;
 }
 
